tests/snapshots/examples_basics/type_builtins.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/type_builtins.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:43:1
   |
43 | print(type_of(42));
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/type_builtins.flx:43:1
   |
43 | print(type_of(42));
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:44:1
   |
44 | print(type_of(3.14));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:45:1
   |
45 | print(type_of("hello"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:46:1
   |
46 | print(type_of(true));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:47:1
   |
47 | print(type_of([|1, 2, 3|]));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:48:1
   |
48 | print(type_of({"a": 1}));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:49:1
   |
49 | print(type_of(None));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:50:1
   |
50 | print(type_of(Some(42)));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:53:1
   |
53 | print(is_int(42));
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:54:1
   |
54 | print(is_int(3.14));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:55:1
   |
55 | print(is_int("hello"));
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:58:1
   |
58 | print(is_float(3.14));
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:59:1
   |
59 | print(is_float(42));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:62:1
   |
62 | print(is_string("hello"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:63:1
   |
63 | print(is_string(42));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:66:1
   |
66 | print(is_bool(true));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:67:1
   |
67 | print(is_bool(false));
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:68:1
   |
68 | print(is_bool(0));
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:71:1
   |
71 | print(is_array([|1, 2, 3|]));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:72:1
   |
72 | print(is_array("hello"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:75:1
   |
75 | print(is_hash({"a": 1}));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:76:1
   |
76 | print(is_hash([|1, 2|]));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:79:1
   |
79 | print(is_none(None));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:80:1
   |
80 | print(is_none(42));
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:83:1
   |
83 | print(is_some(Some(42)));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:84:1
   |
84 | print(is_some(None));
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:90:1
   |
90 | print("Practical examples:");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:100:1
    |
100 | print(safeAdd(1, 2));
    | ^^^^^^^^^^^^^^^^^^^^^
    | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:101:1
    |
101 | print(safeAdd(1, "hello"));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/basics/type_builtins.flx:101:7
    |
101 | print(safeAdd(1, "hello"));
    |       ^^^^^^^^^^^^^^^^^^^
    |       ------------------- expected Int, found String


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:119:1
    |
119 | print(describe(42));
    | ^^^^^^^^^^^^^^^^^^^^
    | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:120:1
    |
120 | print(describe("hello"));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/basics/type_builtins.flx:120:7
    |
120 | print(describe("hello"));
    |       ^^^^^^^^^^^^^^^^^
    |       ----------------- expected Int, found String


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:121:1
    |
121 | print(describe([|1, 2, 3|]));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with Array<Int>.

  --> examples/basics/type_builtins.flx:121:7
    |
121 | print(describe([|1, 2, 3|]));
    |       ^^^^^^^^^^^^^^^^^^^^^
    |       --------------------- expected Int, found Array<Int>


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:131:1
    |
131 | print(requireInt("age", 25));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/type_builtins.flx:132:1
    |
132 | print(requireInt("age", "old"));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/basics/type_builtins.flx:132:7
    |
132 | print(requireInt("age", "old"));
    |       ^^^^^^^^^^^^^^^^^^^^^^^^
    |       ------------------------ expected Int, found String

Found 39 errors.
== stdout ==
<not executed>
